<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1B1B"
    tools:context=".UpdateCalorie">

    <Button
        android:id="@+id/Cancel_Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_corner"
        android:shadowRadius="20"
        android:text="@string/Cancel"
        app:backgroundTint="#7A7878"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/Done_Button" />

    <Button
        android:id="@+id/Done_Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_corner"
        android:text="@string/Done"
        app:backgroundTint="#FFE60E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eTCarbs"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30302F"
        android:ems="10"
        android:hint="@string/Percentage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Cancel_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TvCarbs"
        app:layout_constraintTop_toBottomOf="@+id/eTFat"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eTProtein"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30302F"
        android:ems="10"
        android:hint="@string/Percentage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eTFat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TvProtein"
        app:layout_constraintTop_toBottomOf="@+id/eTTotalCal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eTFat"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30302F"
        android:ems="10"
        android:hint="@string/Percentage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eTCarbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TvFat"
        app:layout_constraintTop_toBottomOf="@+id/eTProtein"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eTTotalCal"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30302F"
        android:ems="10"
        android:hint="@string/InputIntHint"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/eTProtein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TvTotalCal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints="" />

    <TextView
        android:id="@+id/TvTotalCal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="55dp"
        android:text="@string/TotalCaloTxt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TvProtein"
        app:layout_constraintEnd_toStartOf="@+id/eTTotalCal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvProtein"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="55dp"
        android:text="@string/Protein"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TvFat"
        app:layout_constraintEnd_toStartOf="@+id/eTProtein"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvTotalCal" />

    <TextView
        android:id="@+id/TvFat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="55dp"
        android:text= "@string/FatTxt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TvCarbs"
        app:layout_constraintEnd_toStartOf="@+id/eTFat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TvCarbs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/CarbsTxt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Done_Button"
        app:layout_constraintEnd_toStartOf="@+id/eTCarbs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#30302F"
        android:gravity="center"
        android:text="@string/Calories"
        android:textColor="#F8F2F2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TvTotalCal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#FFE60E"
        android:gravity="center"
        android:text="@string/Percentage"
        android:textColor="#F8F2F2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/DarkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/buttonGrey"
        android:background="@drawable/round_corner"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="109dp"
        android:layout_height="136dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/CaloriesUpdate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>